--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,122 +1,63 @@
 .container {
-  min-height: 100vh;
-  padding: 0 0.5rem;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+	background-color: black;
+	min-height: 100vh;
+	padding: 0 0.5rem;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
 }
 
-.main {
-  padding: 5rem 0;
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+.textContent {
+	text-align: center;
 }
 
-.footer {
-  width: 100%;
-  height: 100px;
-  border-top: 1px solid #eaeaea;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.textContent__name {
+	font-size: calc(3rem + 6 * ((100vw - 20rem) / 680));
+	font-style: normal;
+	font-weight: 400;
+	letter-spacing: 0.125rem;
+	color: white;
 }
 
-.footer img {
-  margin-left: 0.5rem;
+.textContent__job {
+	font-size: 1.125rem;
+	font-style: normal;
+	font-weight: 300;
+	line-height: 1.0625rem;
+	letter-spacing: 6px;
+	color: white;
+	margin-bottom: 1.25rem;
 }
 
-.footer a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.textContent__btn {
+	letter-spacing: 1px;
+	display: inline-flex;
+	justify-content: center;
+	align-items: center;
+	gap: 5px;
+	font-size: 0.75rem;
+	padding: 1.1rem 1.875rem;
+	top: 10px;
+	position: relative;
+	border-radius: 5px;
+	color: white;
+	background-color: #302988;
+	transition: background-color 0.2s ease-in-out;
 }
 
-.title a {
-  color: #0070f3;
-  text-decoration: none;
+.textContent__btn:hover {
+	background-color: #383375;
 }
 
-.title a:hover,
-.title a:focus,
-.title a:active {
-  text-decoration: underline;
+.textContent__btn > svg {
+	transition: transform 0.2s ease-in-out;
 }
 
-.title {
-  margin: 0;
-  line-height: 1.15;
-  font-size: 4rem;
+.textContent__btn:hover > svg {
+	transform: translateX(5px);
 }
 
-.title,
-.description {
-  text-align: center;
-}
-
-.description {
-  line-height: 1.5;
-  font-size: 1.5rem;
-}
-
-.code {
-  background: #fafafa;
-  border-radius: 5px;
-  padding: 0.75rem;
-  font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
-}
-
-.grid {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-  max-width: 800px;
-  margin-top: 3rem;
-}
-
-.card {
-  margin: 1rem;
-  flex-basis: 45%;
-  padding: 1.5rem;
-  text-align: left;
-  color: inherit;
-  text-decoration: none;
-  border: 1px solid #eaeaea;
-  border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
-}
-
-.card:hover,
-.card:focus,
-.card:active {
-  color: #0070f3;
-  border-color: #0070f3;
-}
-
-.card h3 {
-  margin: 0 0 1rem 0;
-  font-size: 1.5rem;
-}
-
-.card p {
-  margin: 0;
-  font-size: 1.25rem;
-  line-height: 1.5;
-}
-
-.logo {
-  height: 1em;
-}
-
-@media (max-width: 600px) {
-  .grid {
-    width: 100%;
-    flex-direction: column;
-  }
+.textContent__btn > svg {
+	width: 15px;
 }
