--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,60 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&display=swap");
+
 html,
 body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+	font-family: "Montserrat", sans-serif;
+	font-size: 16px;
 }
 
 a {
-  color: inherit;
-  text-decoration: none;
+	color: inherit;
+	text-decoration: none;
+	margin: 0;
+	padding: 0;
 }
 
 * {
-  box-sizing: border-box;
+	padding: 0;
+	margin: 0;
+	box-sizing: border-box;
+}
+
+img {
+	width: 100%;
+	height: 100%;
+	border-radius: 8px;
+}
+
+.swiper-slide {
+	width: 100% !important;
+	height: 100% !important;
+}
+
+.swiper-slide img {
+	width: 100% !important;
+	height: 100% !important;
+}
+
+.swiper-button-prev,
+.swiper-button-next {
+	color: #302988 !important;
+}
+
+.swiper-pagination-bullet-active {
+	background-color: #302988 !important;
+}
+
+.swiper-pagination-bullet {
+	width: 15px;
+	height: 15px;
+}
+
+.swiper-button-disabled {
+	display: none;
+	opacity: 0;
+}
+
+.swiper-container,
+.swiper-wrapper {
+	width: 100% !important;
 }
