--- a/styles/Layout.module.css
+++ b/styles/Layout.module.css
@@ -1,12 +1,14 @@
 .container {
-	margin: 0 auto;
-	padding: 1.25rem;
-	max-width: 112.5rem;
+	margin: 0 auto 25px auto;
+	padding: 1.75rem;
+	max-width: 90rem;
 }
 
 .pageTitle {
 	text-transform: capitalize;
-	color: rgb(71, 69, 69);
+	/* color: rgb(71, 69, 69); */
+	/* color: rgb(170, 64, 247); */
+	color: whitesmoke;
 	letter-spacing: 0.5rem;
 	margin: 5rem 0;
 	font-weight: 300;
