--- a/styles/Portfolio.module.css
+++ b/styles/Portfolio.module.css
@@ -1,13 +1,7 @@
 .container {
 	width: 100%;
 	display: grid;
-	gap: 3.25rem;
+	gap: 3.85rem;
 	align-items: center;
-	grid-template-columns: repeat(auto-fit, minmax(27.5rem, 1fr));
-}
-
-@media screen and (max-width: 400px) {
-	.container {
-		grid-template-columns: repeat(auto-fit, minmax(15.625rem, 1fr));
-	}
+	grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
 }
