--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,7 @@ html,
 body {
 	font-family: "Montserrat", sans-serif;
 	font-size: 16px;
+	background-color: black;
 }
 
 a {
@@ -11,6 +12,7 @@ a {
 	text-decoration: none;
 	margin: 0;
 	padding: 0;
+	color: white;
 }
 
 * {
